tests/diagnostics/packages/import_usage/imported_generic_union_missing_type_arguments/expect.txt
# exit: 1
lib.coppice:4:12: error: type 'Maybe' expects 1 type arguments, got 0
      value: Maybe := nil
             ^
